--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1023,3 +1023,28 @@ footer.container {
     
 
 }
+@media only screen and (max-width: 300px) {
+   
+    .logo {
+        font-size: 16px;
+    }
+   
+    .hero .tagline {
+        font-size: 24px;
+    }
+    .main-btn {
+        padding: .8em;
+        font-size: 18px;
+    }
+    .main-btn:hover{
+        padding: .8em;
+        font-size: 20px;
+    }
+    .intro .container{
+        padding: 0px;
+        
+    }
+    .intro-text {
+        font-size: 16px;
+    }
+}
