--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1024,7 +1024,9 @@ footer.container {
 
 }
 @media only screen and (max-width: 300px) {
-   
+   body {
+    overflow-x: hidden;
+   }
     .logo {
         font-size: 16px;
     }
@@ -1044,7 +1046,22 @@ footer.container {
         padding: 0px;
         
     }
-    .intro-text {
+    .intro-text, .top-text, .bottom-text   {
         font-size: 16px;
+    }
+    .card {
+        width: 100%;
+    }
+    .testimonial-title {
+        text-align: center;
+    }
+    .testimonial img {
+        text-align: center;
+    }
+    .footer-links ul li a{
+        font-size: 10px;
+    }
+    .cta h2 {
+        font-size: 24px;
     }
 }
