--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1042,6 +1042,9 @@ footer.container {
         padding: .8em;
         font-size: 20px;
     }
+    .intro {
+        min-height: 40vh;
+    }
     .intro .container{
         padding: 0px;
         
