--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1023,7 +1023,7 @@ footer.container {
     
 
 }
-@media only screen and (max-width: 350px) {
+@media only screen and (max-width: 400px) {
    body {
     overflow-x: hidden;
    }
@@ -1066,5 +1066,8 @@ footer.container {
     }
     .cta h2 {
         font-size: 24px;
+    }
+    .final-cta {
+        min-height: 50vh;
     }
 }
