--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1024,11 +1024,12 @@ footer.container {
 
 }
 @media only screen and (max-width: 400px) {
-   body {
-    overflow-x: hidden;
-   }
+ 
     .logo {
         font-size: 16px;
+    }
+    .burger {
+        margin: 0;
     }
    
     .hero .tagline {
