--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1072,4 +1072,8 @@ footer.container {
     .final-cta, footer {
         padding: 50px 0px;
     }
+    .footer-links li {
+        margin-left: 30px;
+        
+    }
 }
