--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1069,6 +1069,9 @@ footer.container {
     .cta h2 {
         font-size: 24px;
     }
+    .mobile-cta-img {
+        top: -50px;
+    }
     .final-cta, footer {
         padding: 50px 0px;
     }
