--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1068,6 +1068,7 @@ footer.container {
     }
     .cta h2 {
         font-size: 24px;
+        padding-top: 50px;
     }
     .mobile-cta-img {
         top: -70px;
