--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1078,7 +1078,7 @@ footer.container {
         
     }
     .final-cta, footer {
-        padding: 50px 0px;
+        padding: 50px 0px 0px 0px;
     }
     .footer-links li {
         margin-left: 30px;
