--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,7 +8,7 @@
 }
 body {
     font-family: 'Montserrat', sans-serif;
-    background: radial-gradient(rgb(77, 92, 143), rgb(42, 50, 83));
+    background: #FEF2C2;
     overflow-x: hidden;
 }
 nav {
@@ -16,14 +16,14 @@ nav {
     justify-content: space-between;
     align-items: center;
     padding: 20px 30px;
-    background: radial-gradient(#2B3760, #2B3760);
+    background: #FEF2C2;
     text-transform: uppercase;
     opacity: 1;
     width: 100%;
     height: 8vh;
     z-index: 100;
     position: fixed;
-    color: white;
+    color: #B52323;
     z-index: 5000;
 }
 
@@ -38,7 +38,7 @@ nav {
 .burger div {
     width: 25px;
     height: 3px;
-    background-color: white;
+    background-color: #B52323;
     margin: 5px;
     transition: all 0.3s ease;
 }
@@ -62,7 +62,7 @@ nav ul li{
 
 nav ul a {
     text-decoration: none;
-    color: #fff;
+    color: #B52323;
     text-transform: uppercase;
     font-weight: bold;
 }
@@ -73,7 +73,7 @@ nav ul a {
 }
 
 .hero  {
-    background: url(../IMG/Depositphotos_22772802_XL\ \(1\).jpg);
+    background: url(../IMG/Depositphotos_23226180_XL\ 1.png);
     height: 57vh;
     background-size: cover;
     background-position: top;
@@ -120,7 +120,7 @@ h1.tagline {
     border-radius: 5px;
     z-index: 1000;
     cursor: pointer;
-    background: #FF6B63;
+    background: #B52323;
     color: white;
     text-transform: uppercase;
     font-weight: bold;
@@ -133,7 +133,7 @@ h1.tagline {
 }
 
 .main-btn:hover {
-    background: #2B3760;
+    background: #84C79B;
     color: #fff;
     font-size: 28px;
 }
@@ -167,6 +167,7 @@ h1.tagline {
 }
 .main {
     padding: 100px 0px;
+    position: relative;
 }
 .main .container {
     max-width: 80%;
@@ -185,7 +186,7 @@ h1.tagline {
 .top-text, .bottom-text {
     line-height: 40px;
     font-size: 18px;
-    color: white;
+    color: #111;
 
 }
 .top-text{
@@ -201,6 +202,18 @@ h1.tagline {
 .bottom-img {
     width: 100%;
     
+}
+.green-blob {
+    z-index: -1;
+    padding-right: 50px;
+    padding-bottom: 30px;
+    
+}
+.mango {
+    position: absolute;
+    right: 0;
+    bottom: -40px;
+    z-index: -1;
 }
 .mobile-chibi {
     display: none;
@@ -252,7 +265,7 @@ h1.tagline {
 
 .teacher-content h1, .start-content h1{
     padding-bottom: 30px;
-    color: rgb(107, 122, 170);
+    color: #B52323;
     font-weight: bold;
 }
 .teacher-content p, .start-content p{
@@ -280,13 +293,13 @@ h1.tagline {
 .value h1, .pricing h1 {
     margin-bottom: 50px;
     font-size: 30px;
-    color: white;
+    color: #B52323;
     text-transform: uppercase;
 }
 .value p, .pricing p{
     line-height: 40px;
     font-size: 18px;
-    color: white;
+    color: #111;
     opacity: 0.8;
 }
 .start-content {
@@ -348,7 +361,7 @@ h1.tagline {
     margin-bottom: 10px;
 }
 .card-title {
-    color: rgb(107, 122, 170);
+    color: #B52323;
     text-transform: uppercase;
     margin-bottom: 10px;
     font-weight: 500;
@@ -487,7 +500,7 @@ h1.tagline {
     margin-bottom: 100px;
     margin-top: 80px;
     font-size: 30px;
-    color: white;
+    color: #B52323;
     text-transform: uppercase;
     
 }
@@ -548,7 +561,7 @@ h1.tagline {
 .cta h2 {
     margin-bottom: 30px;
     padding-top: 100px;
-    color: white;
+    color: #B52323;
     font-size: 32px;
 }
 .cta-img {
@@ -643,7 +656,6 @@ footer.container {
         opacity: 1;
     }
     .nav-links li a {
-        color: white;
         background-color: inherit;
         text-align: right;
         margin: 0px;
@@ -730,7 +742,7 @@ footer.container {
     top: 8vh;
     right: 0;
     text-align: left;
-    background: #2B3760;
+    background: #FEF2C2;
     height: 100vh;
     z-index: 100000;
     text-align: center;
