--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -9,7 +9,7 @@
 .input-group label{
     font-size: 15px;
     font-weight: bold;
-    color: rgb(107, 122, 170);
+    color: #B52323;
 }
 .input-group input {
     padding: .8em 8em;
