--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,6 +9,9 @@
 body {
     font-family: 'Montserrat', sans-serif;
     background: #FEF2C2;
+    
+}
+.container {
     overflow-x: hidden;
 }
 nav {
@@ -915,7 +918,7 @@ footer.container {
         right: 0px;
         top: 0;
         transform: translate(70px, -200px);
-        display: none;
+        display: inherit;
     }
     .bottom-text {
         padding-left: 0px;
