--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,9 +9,9 @@
 body {
     font-family: 'Montserrat', sans-serif;
     background: #FEF2C2;
-    
+    overflow-x: hidden;
 }
-.container {
+.wrapper {
     overflow-x: hidden;
 }
 nav {
@@ -915,7 +915,7 @@ footer.container {
     }
     .mobile-chibi {
         position: absolute;
-        right: 0px;
+        right: -20px;
         top: 0;
         transform: translate(70px, -200px);
         display: inherit;
@@ -1150,7 +1150,7 @@ footer.container {
 }
 
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 450px) {
  
     .logo {
         font-size: 16px;
