--- a/CSS/style.css
+++ b/CSS/style.css
@@ -669,13 +669,12 @@ h1.tagline {
 
 }
 .footer {
-    min-height: 15vh;
     background-color: white;
 }
 
 footer.container {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     flex-direction: column;
 }
@@ -1102,7 +1101,7 @@ footer.container {
     }
     
     footer {
-        height: 18vh;
+        padding: 50px 0px 50px 0px;
         background-color: white;
     }
     
@@ -1227,7 +1226,7 @@ footer.container {
     }
     .social {
         text-align: center;
-        padding: 20px 0px 10px 0px;
+        padding: 0px 0px 0px 0px;
         
      }
      
